force-app/main/default/objects/OrdCnfDet__x/OrdCnfDet__x.object-meta.xml
<CustomObject>
    <externalDataSource>TCP_Get_Order_Confirmation</externalDataSource>
    <externalName>OrdCnfDetSet</externalName>
    <label>OrdCnfDet</label>
    <pluralLabel>OrdCnfDetSet</pluralLabel>
</CustomObject>