force-app/main/default/objects/OrdCnfDet__x/fields/DelvDate__c.field-meta.xml
<CustomField>
    <fullName>DelvDate__c</fullName>
    <description>DelvDate</description>
    <externalDeveloperName>DelvDate</externalDeveloperName>
    <label>DelvDate</label>
    <type>DateTime</type>
</CustomField>