force-app/main/default/objects/OrdCnfDet__x/fields/Descrs__c.field-meta.xml
<CustomField>
    <fullName>Descrs__c</fullName>
    <description>Descrs</description>
    <externalDeveloperName>Descrs</externalDeveloperName>
    <label>Descrs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>