force-app/main/default/objects/OrdCnfDet__x/fields/Inco1__c.field-meta.xml
<CustomField>
    <fullName>Inco1__c</fullName>
    <description>Inco1</description>
    <externalDeveloperName>Inco1</externalDeveloperName>
    <label>Inco1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>