force-app/main/default/objects/OrdCnfDet__x/fields/Inco2__c.field-meta.xml
<CustomField>
    <fullName>Inco2__c</fullName>
    <description>Inco2</description>
    <externalDeveloperName>Inco2</externalDeveloperName>
    <label>Inco2</label>
    <length>28</length>
    <type>Text</type>
</CustomField>