force-app/main/default/objects/OrdCnfDet__x/fields/MatDes__c.field-meta.xml
<CustomField>
    <fullName>MatDes__c</fullName>
    <description>MatDes</description>
    <externalDeveloperName>MatDes</externalDeveloperName>
    <label>MatDes</label>
    <length>40</length>
    <type>Text</type>
</CustomField>