force-app/main/default/objects/OrdCnfDet__x/fields/NetWeight__c.field-meta.xml
<CustomField>
    <fullName>NetWeight__c</fullName>
    <description>NetWeight</description>
    <externalDeveloperName>NetWeight</externalDeveloperName>
    <label>NetWeight</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>