force-app/main/default/objects/OrdCnfDet__x/fields/OrdDate__c.field-meta.xml
<CustomField>
    <fullName>OrdDate__c</fullName>
    <description>OrdDate</description>
    <externalDeveloperName>OrdDate</externalDeveloperName>
    <label>OrdDate</label>
    <type>DateTime</type>
</CustomField>