force-app/main/default/objects/OrdCnfDet__x/fields/PayTerm__c.field-meta.xml
<CustomField>
    <fullName>PayTerm__c</fullName>
    <description>PayTerm</description>
    <externalDeveloperName>PayTerm</externalDeveloperName>
    <label>PayTerm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>