force-app/main/default/objects/OrdCnfDet__x/fields/PlantId__c.field-meta.xml
<CustomField>
    <fullName>PlantId__c</fullName>
    <description>PlantId</description>
    <externalDeveloperName>PlantId</externalDeveloperName>
    <label>PlantId</label>
    <length>4</length>
    <type>Text</type>
</CustomField>