force-app/main/default/objects/OrdCnfDet__x/fields/Salesorder__c.field-meta.xml
<CustomField>
    <fullName>Salesorder__c</fullName>
    <description>Salesorder</description>
    <externalDeveloperName>Salesorder</externalDeveloperName>
    <label>Salesorder</label>
    <length>10</length>
    <type>Text</type>
</CustomField>