force-app/main/default/objects/OrdCnfDet__x/fields/ShipPnt__c.field-meta.xml
<CustomField>
    <fullName>ShipPnt__c</fullName>
    <description>ShipPnt</description>
    <externalDeveloperName>ShipPnt</externalDeveloperName>
    <label>ShipPnt</label>
    <length>4</length>
    <type>Text</type>
</CustomField>