force-app/main/default/objects/OrdCnfDet__x/fields/SiccCode__c.field-meta.xml
<CustomField>
    <fullName>SiccCode__c</fullName>
    <description>SiccCode</description>
    <externalDeveloperName>SiccCode</externalDeveloperName>
    <label>SiccCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>