force-app/main/default/objects/OrdCnfDet__x/fields/Slcadnam__c.field-meta.xml
<CustomField>
    <fullName>Slcadnam__c</fullName>
    <description>Slcadnam</description>
    <externalDeveloperName>Slcadnam</externalDeveloperName>
    <label>Slcadnam</label>
    <length>30</length>
    <type>Text</type>
</CustomField>