force-app/main/default/objects/OrdCnfDet__x/fields/SlcCity__c.field-meta.xml
<CustomField>
    <fullName>SlcCity__c</fullName>
    <description>SlcCity</description>
    <externalDeveloperName>SlcCity</externalDeveloperName>
    <label>SlcCity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>