force-app/main/default/objects/OrdCnfDet__x/fields/SlcCtry__c.field-meta.xml
<CustomField>
    <fullName>SlcCtry__c</fullName>
    <description>SlcCtry</description>
    <externalDeveloperName>SlcCtry</externalDeveloperName>
    <label>SlcCtry</label>
    <length>15</length>
    <type>Text</type>
</CustomField>