force-app/main/default/objects/OrdCnfDet__x/fields/SlcPost__c.field-meta.xml
<CustomField>
    <fullName>SlcPost__c</fullName>
    <description>SlcPost</description>
    <externalDeveloperName>SlcPost</externalDeveloperName>
    <label>SlcPost</label>
    <length>10</length>
    <type>Text</type>
</CustomField>