force-app/main/default/objects/OrdCnfDet__x/fields/SlcStrt__c.field-meta.xml
<CustomField>
    <fullName>SlcStrt__c</fullName>
    <description>SlcStrt</description>
    <externalDeveloperName>SlcStrt</externalDeveloperName>
    <label>SlcStrt</label>
    <length>30</length>
    <type>Text</type>
</CustomField>