force-app/main/default/objects/OrdCnfDet__x/fields/SlocNam__c.field-meta.xml
<CustomField>
    <fullName>SlocNam__c</fullName>
    <description>SlocNam</description>
    <externalDeveloperName>SlocNam</externalDeveloperName>
    <label>SlocNam</label>
    <length>30</length>
    <type>Text</type>
</CustomField>