force-app/main/default/objects/OrdCnfDet__x/fields/Weradnam__c.field-meta.xml
<CustomField>
    <fullName>Weradnam__c</fullName>
    <description>Weradnam</description>
    <externalDeveloperName>Weradnam</externalDeveloperName>
    <label>Weradnam</label>
    <length>30</length>
    <type>Text</type>
</CustomField>