force-app/main/default/objects/OrdCnfDet__x/fields/WerCity__c.field-meta.xml
<CustomField>
    <fullName>WerCity__c</fullName>
    <description>WerCity</description>
    <externalDeveloperName>WerCity</externalDeveloperName>
    <label>WerCity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>