force-app/main/default/objects/OrdCnfDet__x/fields/WerCtry__c.field-meta.xml
<CustomField>
    <fullName>WerCtry__c</fullName>
    <description>WerCtry</description>
    <externalDeveloperName>WerCtry</externalDeveloperName>
    <label>WerCtry</label>
    <length>15</length>
    <type>Text</type>
</CustomField>