force-app/main/default/objects/OrdCnfDet__x/fields/WerkNam__c.field-meta.xml
<CustomField>
    <fullName>WerkNam__c</fullName>
    <description>WerkNam</description>
    <externalDeveloperName>WerkNam</externalDeveloperName>
    <label>WerkNam</label>
    <length>30</length>
    <type>Text</type>
</CustomField>