force-app/main/default/objects/OrdCnfDet__x/fields/WerPost__c.field-meta.xml
<CustomField>
    <fullName>WerPost__c</fullName>
    <description>WerPost</description>
    <externalDeveloperName>WerPost</externalDeveloperName>
    <label>WerPost</label>
    <length>10</length>
    <type>Text</type>
</CustomField>