force-app/main/default/objects/OrdCnfDet__x/fields/WerStrt__c.field-meta.xml
<CustomField>
    <fullName>WerStrt__c</fullName>
    <description>WerStrt</description>
    <externalDeveloperName>WerStrt</externalDeveloperName>
    <label>WerStrt</label>
    <length>30</length>
    <type>Text</type>
</CustomField>