force-app/main/default/objects/OrdCnfDet__x/fields/WUnit__c.field-meta.xml
<CustomField>
    <fullName>WUnit__c</fullName>
    <description>WUnit</description>
    <externalDeveloperName>WUnit</externalDeveloperName>
    <label>WUnit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>